# file-share-rust-backend

./: Cargo.toml
src/: db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs
src/handler/: auth.rs  file.rs  file_query.rs  user.rs
src/utils/: decrypt.rs  encrypt.rs  keys.rs  password.rs
